<resources>
    <string name="app_name">GasCheck</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_action">Home</string>
    <string name="history_action">Histórico</string>
    <string name="favorite_action">Favoritos</string>
    <string name="welcome_message">Olá! Seja Bem-vindo(a)</string>
    <string name="hello_label">Fique por dentro de todos os seus gastos de combustível</string>
    <string name="spend_value_label">Valor gasto:</string>
    <string name="spend_value">R$ 175,00</string>
    <string name="gas_label">Combustível</string>
    <string name="gasoline_label">Gasolina</string>
    <string name="alcohol_label">Etanol</string>
    <string name="choice_value_label">Escolha o valor:</string>
    <string name="symbol_real">R$</string>
    <string name="value_20">20</string>
    <string name="value_30">30</string>
    <string name="value_50">50</string>
    <string name="value_70">70</string>
    <string name="value_100">100</string>
    <string name="value_150">150</string>
    <string name="value_200">200</string>
    <string name="value_250">250</string>
    <string name="others">Outros</string>
    <string name="register_location">Registrar local</string>
    <string name="ask_gas_message">Quanto você deseja abastecer?</string>
    <string name="confirm_action">Confirmar</string>
    <string name="value_0">0,00</string>
    <string name="item_value">%s %s %s</string>
    <string name="value_total">R$ %s </string>
</resources>