<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:backgroundTint="@color/white"
            android:elevation="5dp"
            app:navigationIcon="@drawable/ic_close"
            app:navigationIconTint="@color/flame"
            app:title="GasCheck"
            app:titleTextColor="@color/black_olive" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/text_ask_new_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_gas_message"
        android:textColor="@color/black_olive"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="numberDecimal"
        android:text="@string/value_0"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@+id/text_ask_new_value"
        app:layout_constraintStart_toStartOf="@+id/text_ask_new_value"
        app:layout_constraintTop_toBottomOf="@+id/text_ask_new_value" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/confirm_action"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>